@@ -4,7 +4,7 @@
 		(different from multiple connections)
 	Figure out some way of not displaying a million new mail messages
 	File transfer for IRC?  Maybe later?
-	Chat for Yahoo/ICQ/Jabber
+	Chat for Yahoo/ICQ
 	File transfer for Yahoo/ICQ/Oscar/Napster
 	Working file transfer for TOC
 	Other RVOUS actions for TOC/Oscar
